--- a/application/app/src/main/res/values/strings.xml
+++ b/application/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="enter_your_city">Enter your city</string>
+    <string name="get_weather">Get Weather</string>
 </resources>
